--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,3 @@
-/*Contact style*/
-.link {
-      color: #595959;
-      text-decoration: none;
-}
-.link:hover {
-      color: #ff6b08;
-}
-
 /*Bio style*/
 .bio-title {
       font-size: 45px;
@@ -113,6 +104,11 @@
 }
 
 /*Global style*/
-.accent {
+.link {
+      color: #595959;
+      text-decoration: none;
+}
+
+.accent, .link:hover {
       color: #ff6b08;
-    }
+}
